--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/iuap-design/generate-uui#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.4"
+    "gulp-concat": "^2.6.0",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "gulp-zip": "^3.2.0"
   }
 }
