--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-uui",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "合并构建UUI",
   "main": "gulpfile.js",
   "scripts": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
