--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0"
   }
