--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "合并构建UUI",
   "main": "gulpfile.js",
   "scripts": {
-    "build": "gulp"
+    "build": "gulp dist"
   },
   "repository": {
     "type": "git",
