--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.3",
-    "gulp-zip": "^3.2.0"
+    "gulp-zip": "^3.2.0",
+    "less": "^2.7.1"
   }
 }
