整合gulp输出,统一npm run build

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "build": "gulp dist",
-    "down": "gulp down",
-    "release": "npm run build && npm run down"
+    "down": "gulp down"
   },
   "repository": {
     "type": "git",
