neoui仓库改名，调整gulp配置，重新输出

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ tree
 grid
 datetimepicker
 kero
+neoui
 
 dist/kero
 dist/datatable
@@ -20,6 +21,7 @@ dist/iuap-design
 dist/tree
 dist/grid
 dist/datetimepicker
+dist/neoui
 # dist/uui
 dist/kero
 
