仓库名称修改

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ dist/.DS_Store
 # ignore project
 datatable
 iuap-design
-tree
-grid
-datetimepicker
+neoui-tree
+neoui-grid
+neoui-datetimepicker
 kero
 neoui
 
