--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "gulp dist",
     "down": "gulp down",
-    "deploy": "sh fetch.sh && npm run build"
+    "maven": "gulp maven",
+    "deploy": "sh fetch.sh && npm run build && npm run maven"
   },
   "repository": {
     "type": "git",
