--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
   "name": "generate-uui",
-  "version": "3.0.0",
-  "description": "合并构建UUI",
+  "version": "1.0.0",
+  "description": "## 使用说明",
   "main": "gulpfile.js",
   "scripts": {
-    "build": "gulp dist",
-    "down": "gulp down",
-    "maven": "gulp maven",
-    "deploy": "sh fetch.sh && npm run build && npm run maven"
+    "dev": "webpack --colors --progress --mode=dev",
+    "prod": "webpack --colors --progress --mode=prod",
+    "distjs": "npm run dev && npm run prod",
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iuap-design/generate-uui.git"
   },
-  "keywords": [
-    "iuap",
-    "design"
-  ],
-  "author": "guoyongfeng",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/iuap-design/generate-uui/issues"
   },
   "homepage": "https://github.com/iuap-design/generate-uui#readme",
-  "devDependencies": {
-    "del": "^2.2.1",
+  "dependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.13.2",
+    "eslint": "^3.2.2",
+    "eslint-loader": "^1.5.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-flatmap": "^1.0.0",
-    "gulp-less": "^3.1.0",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.3",
-    "gulp-zip": "^3.2.0",
-    "less": "^2.7.1"
+    "webpack": "^1.13.1",
+    "yargs": "^4.8.1"
+  },
+  "devDependencies": {
+    "kero": "file:kero",
+    "neoui": "file:neoui",
+    "neoui-sparrow": "^1.2.1"
   }
 }
