--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "## 使用说明",
   "main": "gulpfile.js",
   "scripts": {
-    "dev": "webpack --colors --progress --mode=dev",
-    "prod": "webpack --colors --progress --mode=prod",
-    "distjs": "npm run dev && npm run prod",
+    "dev": "webpack --colors --progress --display-modules --mode=dev",
+    "prod": "webpack --colors --progress --display-modules --mode=prod",
+    "distjs": "npm run dev && npm run prod"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/iuap-design/generate-uui#readme",
   "dependencies": {
     "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.13.2",
@@ -31,8 +32,9 @@
     "yargs": "^4.8.1"
   },
   "devDependencies": {
-    "kero": "file:kero",
-    "neoui": "file:neoui",
-    "neoui-sparrow": "^1.2.1"
+    "kero": "^3.1.2",
+    "kero-adapter": "^1.0.2",
+    "neoui": "^3.1.2",
+    "neoui-sparrow": "^1.2.2"
   }
 }
