--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "generate-uui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "## 使用说明",
   "main": "gulpfile.js",
   "scripts": {
     "dev": "webpack --colors --progress --display-modules --mode=dev",
     "prod": "webpack --colors --progress --display-modules --mode=prod",
-    "distjs": "npm run dev && npm run prod"
+    "dist": "npm run dev && npm run prod"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "kero": "^3.1.2",
-    "kero-adapter": "^1.0.2",
+    "kero-adapter": "^1.0.3",
     "neoui": "^3.1.2",
     "neoui-sparrow": "^1.2.2"
   }
