--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-uui",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "## 使用说明",
   "main": "gulpfile.js",
   "scripts": {
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "kero": "^3.1.2",
-    "kero-adapter": "^1.0.3",
-    "neoui": "^3.1.2",
+    "kero-adapter": "*",
+    "neoui": "*",
     "neoui-sparrow": "^1.2.2"
   }
 }
