--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-uui",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "合并构建UUI",
   "main": "gulpfile.js",
   "scripts": {
@@ -36,5 +36,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
     "less": "^2.7.1"
+  },
+  "dependencies": {
+    "kero-adapter": "^1.4.2"
   }
 }
